--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ main {
   width: 100%;
   height: 100%;
   position: absolute;
+  
 }
 .nav {
   text-align: center;
@@ -37,6 +38,7 @@ main {
   padding: 5px;
   border: none;
   background-color: transparent;
+  cursor: pointer;
 }
 
 .navigationicons {
@@ -76,6 +78,7 @@ main {
   display: inline-block;
   margin: 5px;
   border-radius: 50%;
+  cursor: pointer;
 }
 .active {
   background-color: #555;
